[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
categories = ["parsing"]
description = "dsn parsing library"
edition = "2021"
keywords = ["dsn", "specctra", "parsing", "pcb"]
license = "MIT OR Apache-2.0"
name = "memedsn"
repository = "https://github.com/Edgeworth/memedsn"
version = "0.1.0"

[dependencies]
derive_more = "0.99.17"
eyre = "0.6.8"
memegeom = {version = "0.1.0", git = "https://github.com/Edgeworth/memegeom"}
regex = "1.6.0"
strum = { version = "0.24.1", features = ["derive"] }
