[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
categories = ["parsing"]
description = "dsn parsing library"
edition = "2024"
keywords = ["dsn", "specctra", "parsing", "pcb"]
license = "MIT OR Apache-2.0"
name = "memedsn"
repository = "https://github.com/Edgeworth/memedsn"
version = "0.1.0"

[dependencies]
derive_more = {version = "2.0.1", features = ["display"]}
eyre = "0.6.12"
memegeom = {version = "0.1.0", git = "https://github.com/Edgeworth/memegeom"}
regex = "1.11.2"
strum = {version = "0.27.2", features = ["derive"]}
